--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -21,29 +21,50 @@
         <button onclick="mostrarLivros()">Mostrar</button>
 
         <ul id="listaLivros"></ul>
-        
-        <div id="carouselExample" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="imagem1.jpg" class="d-block w-100" alt="Imagem 1">
-                </div>
-                <div class="carousel-item">
-                    <img src="imagem2.jpg" class="d-block w-100" alt="Imagem 2">
-                </div>
-                <div class="carousel-item">
-                    <img src="imagem3.jpg" class="d-block w-100" alt="Imagem 3">
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
+   
     </div>
+   
+    <div class="carrosel">
+        <img id="carroselImagem" src="" alt="Imagem do Carrosel">
+        <div class="botoes">
+        <button id="anterior">Anterior</button>
+        <button id="proxima">Próxima</button>
+    </div>
+    </div>
+    <script>
+        let imgIndice = 0
+        const IMAGENS = ['image1.jpg', 'image2.jpg','image3.jpg', 'image4.jpg'];
+        const prevButton = document.getElementById('anterior');
+        const nextButton = document.getElementById('proxima');
+
+        var IMG = document.getElementById('carroselImagem');
+
+        function carregar() {
+            IMG.src = IMAGENS[imgIndice]
+        }
+
+        prevButton.addEventListener('click', () => {
+            if (imgIndice > 0)
+            --imgIndice
+            //imgIndice = imgIndice - 1;
+            carregar();
+        });
+
+        nextButton.addEventListener('click', () => {
+            var limite=(IMAGENS.length)-1
+            if (imgIndice < limite) {
+            ++imgIndice
+            //imgIndice = imgIndice + 1;
+            carregar();
+            }
+        })
+        carregar();
+
+
+    </script>
+
+
+
 
     <script>
         let biblioteca = [];
