--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
-    <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -19,7 +16,7 @@
         <input id="anoLivro" placeholder="Ano" type="number">
         <button onclick="adicionar()">Adicionar Livro</button>
         <button onclick="mostrarLivros()">Mostrar</button>
-
+        <button onclick="apagarHistorico()">Apagar Histórico</button>
         <ul id="listaLivros"></ul>
    
     </div>
@@ -96,6 +93,11 @@
                 listaLivros.appendChild(listItem);
             }
         }
+
+        function apagarHistorico() {
+    biblioteca = [];
+    mostrarLivros(); // Limpa a lista de livros exibida
+}     
     </script>
 </body>
 </html>
