--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>CADASTRO DE LIVROS</title>
 </head>
 <body>
     <div class="container">
-        <h1>Cadastro de livros</h1>
+        <h1>CADASTRO DE LIVROS</h1>
         <input id="nomeLivro" placeholder="Nome" type="text">
         <input id="autorLivro" placeholder="Autor" type="text">
         <input id="anoLivro" placeholder="Ano" type="number">
